adding some styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,3 +60,12 @@
   height:150px;
 
 }
+
+.homewrapper {
+  background-color:#f8f7f6;
+}
+
+.identity-box{
+  background-color:#e2d2a9;
+  border-radius:25px;
+}
