--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -117,6 +117,47 @@ right:50px;
 
 }
 
+.down-arrow {
+  position: absolute;
+  top:60px;
+  left: 50px;
+  width: 0;
+  height: 30px;
+  border: 2px solid;
+  border-radius: 2px;
+  animation: jumpInfinite 1.5s infinite;
+
+}
+
+.introtextbox{
+  max-width:300px;
+}
+
+.down-arrow:after {
+  content: " ";
+  position: absolute;
+  top: 12px;
+  left: -8px;
+  width: 16px;
+  height: 16px;
+  border-bottom: 4px solid;
+  border-right: 4px solid;
+  border-radius: 4px;
+  transform: rotateZ(45deg);
+}
+
+@keyframes jumpInfinite {
+  0% {
+    margin-top: 0;
+  }
+  50% {
+    margin-top: 20px;
+  }
+  100% {
+    margin-top: 0;
+  }
+}
+
 @media screen and (max-width: 800px) {
 .homewrapper{
   width:1200px;
