working on web section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,10 +90,10 @@
 }
 
 .photoboxes{
-  height:500px;
+  height:400px;
   width:500px;
   background-size:cover ;
-  background-position:center;
+  background-position:top;
 }
 
 .iconboxone {
