--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -183,6 +183,7 @@ right:50px;
   display:flex;
   flex-direction:column;
   justify-content:center;
+  margin-left:200px;
 
 }
 .triplerowwrapper{
@@ -214,6 +215,7 @@ right:50px;
 }
 .mainhead{
   max-width:400px;
+  margin-left:180px;
 }
 .iconboxtwo{
   position:absolute;
